--- a/register.html
+++ b/register.html
@@ -23,6 +23,8 @@
 				</label>
 				<input type="email" name="email" placeholder="Email" id="email" required>
 				<input type="submit" value="Register">
+                
+                <input type="button" onclick="window.location.href='index.html';" value="Already have an Account?" />
 			</form>
 		</div>
 	</body>
